--- a/Publications.html
+++ b/Publications.html
@@ -29,7 +29,7 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
-<li><p>Z. Qin, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.02592">Guaranteed Nonconvex Factorization Approach for Tensor Train Recovery</a>, preprint, 2024.</p>
+<li><p>Z. Qin, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.02592">Guaranteed Nonconvex Factorization Approach for Tensor Train Recovery</a>," preprint, 2024.</p>
 </li>
 </ul>
 <ul>
@@ -420,7 +420,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-12 17:45:14 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-03 16:52:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
