--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 <p><b><font size=+1 ><b>Call for papers: <a href="https://cpal.cc/">Conference on Parsimony and Learning (CPAL)</a>, January 2024, Hongkong</b></font></b></p>
 <h2>News: </h2>
 <ul>
+<li><p>[May 2024] Thrilled to receive the ORAU Ralph E. Powe Junior Faculty Enhancement Award.</p>
+</li>
+</ul>
+<ul>
 <li><p>[May 2024] Two papers accepted to <a href="https://icml.cc/">ICML 2024</a>. </p>
 </li>
 </ul>
@@ -217,7 +221,7 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-05-12 17:43:28 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-03 16:51:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
