--- a/index.html
+++ b/index.html
@@ -38,11 +38,17 @@ Email: zhu.3440@osu.edu</p>
 </td></tr></table>
 <p><br /></p>
 <p>We are seeking Ph.D. students in Machine Learning (particularly analyses and practical techniques for deep learning, generative models, and LLMs), Signal Processing, and Quantum Information and Computing. Welcome candidates from any background, e.g., EECS, math, physics.</p>
-<p>Our group works on theoretical and computational aspects of data science and machine learning, with a focus on developing efficient methods for extracting useful information from large-scale and high-dimensional data, proving their correctness, and applying them to solving real-world problems. A few current projects include </p>
-<p><b><font size=+1 ><b>Call for papers: <a href="https://signalprocessingsociety.org/sites/default/files/uploads/special_issues_deadlines/JSTSP_SI_seeking_low.pdf">IEEE JSTSP Special Issue on Seeking Low-dimensionality in Deep
-Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b></p>
-<p><b><font size=+1 ><b>Call for papers: <a href="https://cpal.cc/">Conference on Parsimony and Learning (CPAL)</a>, January 2024, Hongkong</b></font></b></p>
+<p><b><font size=+1 ><b>Call for papers: <a href="https://deepmath-conference.com/">Conference on the Mathematical Theory of Deep Neural Networks</a>, manuscript due: November 14-15, 2024, Philadelphia</b></font></b></p>
+<p><b><font size=+1 ><b>Call for papers: <a href="https://cpal.cc/">Conference on Parsimony and Learning (CPAL)</a>, March 2025, Stanford</b></font></b></p>
 <h2>News: </h2>
+<ul>
+<li><p>[Aug 2024] Received an NSF RI Medium grant on <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2402952&amp;HistoricalAwards=false">Principled Approaches to Deep Learning for Low-dimensional Structures</a>, joint with U Michigan adn UC Berkeley.</p>
+</li>
+</ul>
+<ul>
+<li><p>[Aug 2024] Received an NSF ECCS grant on <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2409701&amp;HistoricalAwards=false">Scalable, Robust, and Distributed Nonconvex Approaches for Structured Tensor Recovery</a>, joint with Iowa State.</p>
+</li>
+</ul>
 <ul>
 <li><p>[May 2024] Thrilled to receive the ORAU Ralph E. Powe Junior Faculty Enhancement Award.</p>
 </li>
@@ -221,7 +227,7 @@ Neural Networks (SLowDNN)</a>; manuscript due: November 30, 2023</b></font></b>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-03 16:51:25 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-19 13:48:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
