--- a/Publications.html
+++ b/Publications.html
@@ -42,10 +42,6 @@
 </li>
 </ul>
 <ul>
-<li><p>Z. Zhu, J. Lukens, and B. Kirby, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.16921">On the connection between least squares, regularization, and classical shadows</a>," preprint, 2023.</p>
-</li>
-</ul>
-<ul>
 <li><p>P. Wang, X. Li, C. Yaras, Z. Zhu, L. Balzano, W. Hu, and Q. Qu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2311.02960">Understanding Deep Representation Learning via Layerwise Feature Compression and Discrimination</a>," preprint, 2023.</p>
 </li>
 </ul>
@@ -64,11 +60,15 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2306.09432">Quantum State Tomography for Matrix Product Density Operators</a>," to appear in <i>IEEE Transactions on Information Theory</i>.</p>
+<li><p>Z. Zhu, J. Lukens, and B. Kirby, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.16921">On the connection between least squares, regularization, and classical shadows</a>," accepted in <i>Quantum</i>, 2024.</p>
 </li>
 </ul>
 <ul>
-<li><p>X. Li, S. Liu, J. Zhou, X. Lu, C. Fernandez-Granda, Z. Zhu, Q. Qu,&lsquo;&lsquo;<a href="https://arxiv.org/abs/2212.12206">Principled and efficient transfer learning of deep models via neural collapse</a>," accepted by <i>Transactions on Machine Learning</i>, 2024.</p>
+<li><p>Z. Qin, C. Jameson, Z. Gong, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://ieeexplore.ieee.org/document/10417060">Quantum State Tomography for Matrix Product Density Operators</a>," <i>IEEE Transactions on Information Theory</i>, vol. 70, pp. 5030 - 5056, 2024.</p>
+</li>
+</ul>
+<ul>
+<li><p>X. Li, S. Liu, J. Zhou, X. Lu, C. Fernandez-Granda, Z. Zhu, Q. Qu,&lsquo;&lsquo;<a href="https://arxiv.org/abs/2212.12206">Principled and efficient transfer learning of deep models via neural collapse</a>," <i>Transactions on Machine Learning</i>, 2024.</p>
 </li>
 </ul>
 <ul>
@@ -420,7 +420,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-03 16:52:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-26 13:39:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
