--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@ Email: zhu.3440@osu.edu</p>
 </li>
 </ul>
 <ul>
+<li><p>[June 2024] Gave a tutorial on “<a href="https://cvpr2024-tutorial-low-dim-models.github.io/">Learning Deep Low-dimensional Models from High-Dimensional Data: From Theory to Practice</a>” at CVPR 2024. </p>
+</li>
+</ul>
+<ul>
 <li><p>[May 2024] Thrilled to receive the ORAU Ralph E. Powe Junior Faculty Enhancement Award.</p>
 </li>
 </ul>
@@ -227,7 +231,7 @@ Email: zhu.3440@osu.edu</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-19 13:48:28 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-08-26 13:40:01 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
