--- a/Publications.html
+++ b/Publications.html
@@ -29,10 +29,6 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
-<li><p>Z. Qin, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.02592">Guaranteed Nonconvex Factorization Approach for Tensor Train Recovery</a>," preprint, 2024.</p>
-</li>
-</ul>
-<ul>
 <li><p>T. Ding, T. Chen, H. Zhu, J. Jiang, Y. Zhong, J. Zhou, G. Wang, Z. Zhu, I. Zharkov, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2312.00678">The Efficiency Spectrum of Large Language Models: An Algorithmic Survey</a>," preprint, 2023.
 <a href="https://github.com/tding1/Efficient-LLM-Survey">github repo</a></p>
 </li>
@@ -60,7 +56,11 @@
 </ul>
 <h2>Journal Papers</h2>
 <ul>
-<li><p>Z. Zhu, J. Lukens, and B. Kirby, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.16921">On the connection between least squares, regularization, and classical shadows</a>," accepted in <i>Quantum</i>, 2024.</p>
+<li><p>Z. Qin, M. B. Wakin, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.02592">Guaranteed Nonconvex Factorization Approach for Tensor Train Recovery</a>," Journal of Machine Learning Research, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>Z. Zhu, J. Lukens, and B. Kirby, &lsquo;&lsquo;<a href="https://quantum-journal.org/papers/q-2024-08-29-1455/">On the connection between least squares, regularization, and classical shadows</a>," <i>Quantum</i>, vol. 8, 2024.</p>
 </li>
 </ul>
 <ul>
@@ -176,6 +176,18 @@
 </li>
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
+<ul>
+<li><p>X. Chen, Z. Zhu, A. Perrault, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.05710">The Distributional Reward Critic Framework for Reinforcement Learning Under Perturbed Rewards</a>," <i>AAAI</i>, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>J. Jiang, J. Zhou, Z. Zhu, &lsquo;&lsquo;On Layer-wise Representation Similarity: Application for Multi-Exit Models with a Single Classifier," <i>NeurIPS Workshop on Symmetry and Geometry in Neural Representations</i>, 2024.</p>
+</li>
+</ul>
+<ul>
+<li><p>X. Li, Z. Zhang, X. Li, S. Chen, Z. Zhu, P. Wang, Q. Qu, &lsquo;&lsquo;Understanding Diffusion-based Representation Learning via Low-Dimensional Modeling," <i>NeurIPS Workshop on Mathematics of Modern Machine Learning</i>, 2024.</p>
+</li>
+</ul>
 <ul>
 <li><p>J. Jiang*, J. Zhou*, P. Wang, Q. Qu, D. Mixon, C. You, and Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2310.05351">Generalized neural collapse for a large number of classes</a>," <i>International Conference in Machine Learning (ICML)</i>, 2024.</p>
 </li>
@@ -420,7 +432,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-08-26 13:39:57 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-15 01:35:45 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
