--- a/Teaching.html
+++ b/Teaching.html
@@ -25,6 +25,18 @@
 <h1>Teaching</h1>
 <h2>Ohio State University</h2>
 <ul>
+<li><p>Spring 25: <a href="https://sites.google.com/view/osu-cse-5539-sp25-zhu">Deep Learning: Models, Theory and Applications (CSE 5539)</a></p>
+</li>
+</ul>
+<ul>
+<li><p>Autumn 24: Survey of Artificial Intelligence I (CSE 3521)</p>
+</li>
+</ul>
+<ul>
+<li><p>Spring 24: Machine Learning (CSE 5523)</p>
+</li>
+</ul>
+<ul>
 <li><p>Spring 23: <a href="https://sites.google.com/view/osu-cse-5539-sp23-zhu">Deep Learning: Models, Theory and Applications (CSE 5539)</a></p>
 </li>
 </ul>
@@ -57,7 +69,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-17 22:44:02 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-15 01:39:49 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
