--- a/Publications.html
+++ b/Publications.html
@@ -29,6 +29,26 @@
 <p><a href="https://scholar.google.com/citations?user=gmSwszcAAAAJ&amp;hl=zh-CN&amp;oi=sra">My Google Scholar Profile</a></p>
 <h2>Preprints (* indicates equal contribution)</h2>
 <ul>
+<li><p>Zhen Qin, Joseph M. Lukens, Brian T. Kirby, Zhihui Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2501.03144">Enhancing Quantum State Reconstruction with Structured Classical Shadows</a>," preprint, 2025.</p>
+</li>
+</ul>
+<ul>
+<li><p>H. Zhu, F. Wang, T. Ding, Q. Qu, Z. Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2412.08175">Model Collapse Analysis and Improvement for Rectified Flow Models</a>," preprint, 2024.</p>
+</li>
+</ul>
+<ul>
+<li><p>Zhen Qin, Casey Jameson, Alireza Goldar, Michael B. Wakin, Zhexuan Gong, Zhihui Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2410.02583">Sample-Optimal Quantum State Tomography for Structured Quantum States in One Dimension</a>," preprint, 2024.</p>
+</li>
+</ul>
+<ul>
+<li><p>Zhen Qin, Zhihui Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2410.15224">Robust Low-rank Tensor Train Recovery</a>," preprint, 2024.</p>
+</li>
+</ul>
+<ul>
+<li><p>Zhen Qin, Zhihui Zhu, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2406.06002">Computational and Statistical Guarantees for Tensor-on-Tensor Regression with Tensor Train Decomposition</a>," preprint, 2024.</p>
+</li>
+</ul>
+<ul>
 <li><p>T. Ding, T. Chen, H. Zhu, J. Jiang, Y. Zhong, J. Zhou, G. Wang, Z. Zhu, I. Zharkov, and L. Liang, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2312.00678">The Efficiency Spectrum of Large Language Models: An Algorithmic Survey</a>," preprint, 2023.
 <a href="https://github.com/tding1/Efficient-LLM-Survey">github repo</a></p>
 </li>
@@ -176,6 +196,10 @@
 </li>
 </ul>
 <h2>Conference Papers&ndash;Machine Learning</h2>
+<ul>
+<li><p>J. Jiang, J. Zhou, Z. Zhu, &lsquo;&lsquo;Tracing Representation Progression: Analyzing and Enhancing Layer-Wise Similarity," <i>International Conference on Learning Representations (ICLR)</i>, 2025.</p>
+</li>
+</ul>
 <ul>
 <li><p>X. Chen, Z. Zhu, A. Perrault, &lsquo;&lsquo;<a href="https://arxiv.org/abs/2401.05710">The Distributional Reward Critic Framework for Reinforcement Learning Under Perturbed Rewards</a>," <i>AAAI</i>, 2025.</p>
 </li>
@@ -432,7 +456,7 @@ Advances in Multi-Sensor Adaptive Processing (CAMSAP)</i>, 2020.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-01-15 01:35:45 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-01-22 23:12:01 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
